Jython NEWS

For more details, please see https://hg.python.org/jython

Development tip
  Bugs fixed
    - [ 2410 ] Regression in PySystemStateTest (leading slash)
    - [ 2639 ] Incorrect result when using != comparison against Java {List, Set, Map}
    - [ 2672 ] Integer formatting emits two minus signs with -2^31
    - [ 2688 ] ClassCastException when adding list of non-PyObjects
    - [ 2659 ] Determine console encoding without access violation (Java 9)
    - [ 2662 ] IllegalAccessException accessing public abstract method via PyReflectedFunction
    - [ 2501 ] JAVA_STACK doesn't work (fixed for Windows launcher only)
    - [ 1866 ] Parser does not have mismatch token error messages caught by BaseRecognizer
    - [ 1930 ] traceback raises exception in os.py
    - [ 2419 ] List expected failures by OS platform in regrtest.py
    - [ 2611 ] mkdir() operation in /Lib/os.py has different behavior when running in Docker container
    - [ 2655 ] __findattr__ is final (update documentation)
    - [ 2646 ] Test failure in test_os_jy after utf-8 decode
    - [ 2469 ] jython launcher fails on Windows if JAVA_HOME is set
    - [ 2650 ] Detail message is not set on PyException from PythonInterpreter
    - [ 2403 ] VerifyError when implementing interfaces containing default methods (Java 8)

  New Features
    - The main program behaves more like CPython in many small ways, including a more correct
      treatment of the -i option. This simplifies support, and may also make it unnecessary for
      users to work around differences from CPython.
    - python.startup registry property (and JYTHONSTARTUP environment variable) added.

Jython 2.7.2a1
  Bugs fixed
    - [ 2632 ] Handle unicode data appropriately in csv module
    - [ 2638 ] str not default-decoded in str-unicode operations
    - [ 2622 ] json dumps error (use of AbstractDict)
    - [ 2607, 2620 ] Error loading Python DLL (error code 14001)
    - [ 2612 ] NPE while trying to load class